@@ -69,6 +69,7 @@ wxMSW:
 wxOSX:
 
 - Remove extra borders around wxFilePickerCtrl (John Roberts).
+- Set up extensions filter correctly in wxFileDialog (nick863).
 - Turn off automatic quotes substitutions in wxTextCtrl (Xlord2).
 
 
